@@ -1,11 +1,8 @@
 package io.jenkins.plugins.propelo.commons.service;
 
-import io.jenkins.plugins.propelo.commons.service.JenkinsInstanceGuidService;
-
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
@@ -15,11 +12,13 @@ import java.util.UUID;
 
 import static io.jenkins.plugins.propelo.commons.plugins.Common.JENKINS_INSTANCE_GUID_FILE;
 import static io.jenkins.plugins.propelo.commons.plugins.Common.UTF_8;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class JenkinsInstanceGuidServiceTest {
+class JenkinsInstanceGuidServiceTest {
 
     @Test
-    public void testCreateOrReturnInstanceGuidNewInstall() throws IOException {
+    void testCreateOrReturnInstanceGuidNewInstall() throws IOException {
         File expandedLevelOpsPluginDir = null;
         File dataDirectory = null;
         File dataDirectoryWithVersion = null;
@@ -30,25 +29,25 @@ public class JenkinsInstanceGuidServiceTest {
 
             JenkinsInstanceGuidService service = new JenkinsInstanceGuidService(expandedLevelOpsPluginDir, dataDirectory, dataDirectoryWithVersion);
             String guid = service.createOrReturnInstanceGuid();
-            Assert.assertTrue(StringUtils.isNotBlank(guid));
-            for(int i=0; i < 10; i++){
-                Assert.assertEquals(guid, service.createOrReturnInstanceGuid());
+            assertTrue(StringUtils.isNotBlank(guid));
+            for (int i = 0; i < 10; i++) {
+                assertEquals(guid, service.createOrReturnInstanceGuid());
             }
         } finally {
-            if (expandedLevelOpsPluginDir != null){
+            if (expandedLevelOpsPluginDir != null) {
                 FileUtils.deleteDirectory(expandedLevelOpsPluginDir);
             }
-            if (dataDirectory != null){
+            if (dataDirectory != null) {
                 FileUtils.deleteDirectory(dataDirectory);
             }
-            if (dataDirectoryWithVersion != null){
+            if (dataDirectoryWithVersion != null) {
                 FileUtils.deleteDirectory(dataDirectoryWithVersion);
             }
         }
     }
 
     @Test
-    public void testCreateOrReturnInstanceGuidExistingDataDirectory() throws IOException {
+    void testCreateOrReturnInstanceGuidExistingDataDirectory() throws IOException {
         File jenkinsInstanceGuidFileInDataDirectory = null;
         File expandedLevelOpsPluginDir = null;
         File dataDirectory = null;
@@ -65,28 +64,28 @@ public class JenkinsInstanceGuidServiceTest {
 
             JenkinsInstanceGuidService service = new JenkinsInstanceGuidService(expandedLevelOpsPluginDir, dataDirectory, dataDirectoryWithVersion);
             String guid = service.createOrReturnInstanceGuid();
-            Assert.assertEquals(existingGuid, guid);
+            assertEquals(existingGuid, guid);
             File jenkinsInstanceGuidFileInExpandedPluginPath = new File(expandedLevelOpsPluginDir, JENKINS_INSTANCE_GUID_FILE);
-            Assert.assertTrue(jenkinsInstanceGuidFileInExpandedPluginPath.exists());
-            Assert.assertEquals(existingGuid, new String(Files.readAllBytes(jenkinsInstanceGuidFileInExpandedPluginPath.toPath()), UTF_8));
-            for(int i=0; i < 10; i++){
-                Assert.assertEquals(guid, service.createOrReturnInstanceGuid());
+            assertTrue(jenkinsInstanceGuidFileInExpandedPluginPath.exists());
+            assertEquals(existingGuid, Files.readString(jenkinsInstanceGuidFileInExpandedPluginPath.toPath(), UTF_8));
+            for (int i = 0; i < 10; i++) {
+                assertEquals(guid, service.createOrReturnInstanceGuid());
             }
         } finally {
-            if (expandedLevelOpsPluginDir != null){
+            if (expandedLevelOpsPluginDir != null) {
                 FileUtils.deleteDirectory(expandedLevelOpsPluginDir);
             }
-            if (dataDirectory != null){
+            if (dataDirectory != null) {
                 FileUtils.deleteDirectory(dataDirectory);
             }
-            if (dataDirectoryWithVersion != null){
+            if (dataDirectoryWithVersion != null) {
                 FileUtils.deleteDirectory(dataDirectoryWithVersion);
             }
         }
     }
 
     @Test
-    public void testCopyJenkinsInstanceGuidFileToDataDirectoryWithVersionNewInstall() throws IOException {
+    void testCopyJenkinsInstanceGuidFileToDataDirectoryWithVersionNewInstall() throws IOException {
         File expandedLevelOpsPluginDir = null;
         File dataDirectory = null;
         File dataDirectoryWithVersion = null;
@@ -97,30 +96,30 @@ public class JenkinsInstanceGuidServiceTest {
 
             JenkinsInstanceGuidService service = new JenkinsInstanceGuidService(expandedLevelOpsPluginDir, dataDirectory, dataDirectoryWithVersion);
             String guid = service.createOrReturnInstanceGuid();
-            Assert.assertTrue(StringUtils.isNotBlank(guid));
+            assertTrue(StringUtils.isNotBlank(guid));
 
-            for(int i=0; i<10; i++) {
+            for (int i = 0; i < 10; i++) {
                 boolean success = service.copyJenkinsInstanceGuidFileToDataDirectoryWithVersion();
-                Assert.assertTrue(success);
+                assertTrue(success);
                 File jenkinsInstanceFileInDataDirWithVersion = new File(dataDirectoryWithVersion, JENKINS_INSTANCE_GUID_FILE);
-                Assert.assertTrue(jenkinsInstanceFileInDataDirWithVersion.exists());
-                Assert.assertEquals(guid, new String(Files.readAllBytes(jenkinsInstanceFileInDataDirWithVersion.toPath()), UTF_8));
+                assertTrue(jenkinsInstanceFileInDataDirWithVersion.exists());
+                assertEquals(guid, Files.readString(jenkinsInstanceFileInDataDirWithVersion.toPath(), UTF_8));
             }
         } finally {
-            if (expandedLevelOpsPluginDir != null){
+            if (expandedLevelOpsPluginDir != null) {
                 FileUtils.deleteDirectory(expandedLevelOpsPluginDir);
             }
-            if (dataDirectory != null){
+            if (dataDirectory != null) {
                 FileUtils.deleteDirectory(dataDirectory);
             }
-            if (dataDirectoryWithVersion != null){
+            if (dataDirectoryWithVersion != null) {
                 FileUtils.deleteDirectory(dataDirectoryWithVersion);
             }
         }
     }
 
     @Test
-    public void testCopyJenkinsInstanceGuidFileToDataDirectoryWithVersionExistingDataDirectory() throws IOException {
+    void testCopyJenkinsInstanceGuidFileToDataDirectoryWithVersionExistingDataDirectory() throws IOException {
         File jenkinsInstanceGuidFileInDataDirectory = null;
         File expandedLevelOpsPluginDir = null;
         File dataDirectory = null;
@@ -137,27 +136,27 @@ public class JenkinsInstanceGuidServiceTest {
 
             JenkinsInstanceGuidService service = new JenkinsInstanceGuidService(expandedLevelOpsPluginDir, dataDirectory, dataDirectoryWithVersion);
             String guid = service.createOrReturnInstanceGuid();
-            Assert.assertEquals(existingGuid, guid);
+            assertEquals(existingGuid, guid);
 
             File jenkinsInstanceGuidFileInExpandedPluginPath = new File(expandedLevelOpsPluginDir, JENKINS_INSTANCE_GUID_FILE);
-            Assert.assertTrue(jenkinsInstanceGuidFileInExpandedPluginPath.exists());
-            Assert.assertEquals(existingGuid, new String(Files.readAllBytes(jenkinsInstanceGuidFileInExpandedPluginPath.toPath()), UTF_8));
+            assertTrue(jenkinsInstanceGuidFileInExpandedPluginPath.exists());
+            assertEquals(existingGuid, Files.readString(jenkinsInstanceGuidFileInExpandedPluginPath.toPath(), UTF_8));
 
-            for(int i=0; i<10; i++) {
+            for (int i = 0; i < 10; i++) {
                 boolean success = service.copyJenkinsInstanceGuidFileToDataDirectoryWithVersion();
-                Assert.assertTrue(success);
+                assertTrue(success);
                 File jenkinsInstanceFileInDataDirWithVersion = new File(dataDirectoryWithVersion, JENKINS_INSTANCE_GUID_FILE);
-                Assert.assertTrue(jenkinsInstanceFileInDataDirWithVersion.exists());
-                Assert.assertEquals(existingGuid, new String(Files.readAllBytes(jenkinsInstanceFileInDataDirWithVersion.toPath()), UTF_8));
+                assertTrue(jenkinsInstanceFileInDataDirWithVersion.exists());
+                assertEquals(existingGuid, Files.readString(jenkinsInstanceFileInDataDirWithVersion.toPath(), UTF_8));
             }
         } finally {
-            if (expandedLevelOpsPluginDir != null){
+            if (expandedLevelOpsPluginDir != null) {
                 FileUtils.deleteDirectory(expandedLevelOpsPluginDir);
             }
-            if (dataDirectory != null){
+            if (dataDirectory != null) {
                 FileUtils.deleteDirectory(dataDirectory);
             }
-            if (dataDirectoryWithVersion != null){
+            if (dataDirectoryWithVersion != null) {
                 FileUtils.deleteDirectory(dataDirectoryWithVersion);
             }
         }
